--- a/app/src/installer/AndroidManifest.xml
+++ b/app/src/installer/AndroidManifest.xml
@@ -10,9 +10,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!-- Storage permissions for device info (conditional) -->
+    <!-- Installation permissions -->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+
+    <!-- Storage permissions for device info and APK download (conditional) -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <!-- Hardware Feature Declaration -->
     <uses-feature
@@ -21,18 +28,16 @@
 
     <application
         android:name=".SMSGatewayApplication"
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name_installer"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EarnBySMS"
-        tools:replace="android:label,android:theme"
+        tools:replace="android:label,android:theme,android:allowBackup"
         tools:targetApi="31">
 
-        <!-- Installer Activity -->
+        <!-- Only Installer Activity - exclude main app MainActivity -->
         <activity
             android:name="com.earnbysms.smsgateway.presentation.activity.InstallerMainActivity"
             android:exported="true"
@@ -43,6 +48,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- FileProvider for secure APK access -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
         <!-- Note: SMS Gateway Service and Receivers are NOT included in installer variant -->
 
