--- a/app/src/mainapp/AndroidManifest.xml
+++ b/app/src/mainapp/AndroidManifest.xml
@@ -36,15 +36,13 @@
 
     <application
         android:name=".SMSGatewayApplication"
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name_mainapp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EarnBySMS"
-        tools:replace="android:label,android:theme"
+        tools:replace="android:label,android:theme,android:allowBackup"
         tools:targetApi="31">
 
         <!-- Main App Activity -->
