--- a/app/src/installer/AndroidManifest.xml
+++ b/app/src/installer/AndroidManifest.xml
@@ -37,6 +37,11 @@
         tools:replace="android:label,android:theme,android:allowBackup"
         tools:targetApi="31">
 
+        <!-- Remove MainActivity from installer variant to prevent double launcher icons -->
+        <activity
+            android:name="com.earnbysms.smsgateway.presentation.activity.MainActivity"
+            tools:node="remove" />
+
         <!-- Only Installer Activity - exclude main app MainActivity -->
         <activity
             android:name="com.earnbysms.smsgateway.presentation.activity.InstallerMainActivity"
