--- a/app/src/mainapp/AndroidManifest.xml
+++ b/app/src/mainapp/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <!-- SMS and Phone Permissions (Full set for main app) -->
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.BROADCAST_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
@@ -73,7 +74,8 @@
         <receiver
             android:name="com.earnbysms.smsgateway.presentation.receiver.SMSReceiver"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true"
+            android:permission="android.permission.BROADCAST_SMS">
             <intent-filter android:priority="1000">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
