--- a/app/src/mainapp/AndroidManifest.xml
+++ b/app/src/mainapp/AndroidManifest.xml
@@ -55,7 +55,11 @@
             android:name="com.earnbysms.smsgateway.presentation.activity.MainAppMainActivity"
             android:exported="true"
             android:label="@string/app_name_mainapp"
-            android:theme="@style/Theme.EarnBySMS">
+            android:theme="@style/Theme.EarnBySMS"
+            android:excludeFromRecents="true"
+            android:noHistory="true"
+            android:taskAffinity=""
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
